examples/bad/unknownvar.hid
/* Program will end with an unknown variable error */
declare a;
print b;
